src/test/deca/syntax/valid/created/avec_objet/decl_fields.deca
// Règles attendues (occurences dans lignes du fichier résultat):
//
// Auteur: Eliott
//
// Historique:
//    cree le 20/01/2024
//
// Description:
//    test de programme syntaxiquement correct.


class A {
    int age;
    string nom;
    boolean estBeau;
    string metier;
    int salaire;
}
