src/test/deca/syntax/invalid/created/avec_objet/bad_field.deca
// Résultat erreur:
//    Déclaration de champ incorrecte (règle 3.7)
//
// Description:
//    Tests de programme incorrect contextuellement (déclaration de champ invalide)
//
// Auteur:
//    Jerome
//
// Historique:
//    Créé le 16/01/2024

class MaClasse {
    int champCorrect; 
    
    
    champIncorrect;
}
